Bug 1226145 - actually check whether the on-screen keyboard is up rather than relying on internal state, r=masayuki